<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".apps.ui.features.jobs.view.JobsDetailsActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2f64a3"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtPositionName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:textColor="#ffffff"
            android:textIsSelectable="true"
            android:textSize="21sp"
            app:layout_constraintEnd_toStartOf="@+id/img_company_icon"
            app:layout_constraintHorizontal_bias="0.375"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_company_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:paddingTop="10dp"
            android:src="@drawable/logo"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/txtCompanyName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/txtCompanyName"
            app:layout_constraintTop_toTopOf="@+id/txtPositionName" />

        <TextView
            android:id="@+id/txtCompanyName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="80dp"
            android:textColor="#ffffff"
            android:textIsSelectable="true"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.062"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPositionName" />

        <TextView
            android:id="@+id/txtVacancy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="8dp"
            android:drawablePadding="5dp"
            android:text="@string/vacancies"
            android:textColor="#ffff"
            app:drawableStartCompat="@drawable/ic_vacancies"
            app:layout_constraintEnd_toStartOf="@+id/txtDeadline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCompanyName" />

        <TextView
            android:id="@+id/txtVacancyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:textColor="#ffff"
            android:text="@string/not_specific"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toStartOf="@+id/txtDeadlineValue"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtVacancy" />

        <TextView
            android:id="@+id/txtDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:drawablePadding="5dp"
            android:text="@string/deadline"
            android:textColor="#ffff"
            app:drawableStartCompat="@drawable/ic_deadline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/txtSalary"
            app:layout_constraintTop_toBottomOf="@+id/txtCompanyName" />

        <TextView
            android:id="@+id/txtDeadlineValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="32dp"
            android:textColor="#ffff"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/txtDeadline"
            app:layout_constraintTop_toBottomOf="@+id/txtDeadline" />

        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:drawablePadding="5dp"
            android:text="@string/location"
            android:textColor="#ffff"
            app:drawableStartCompat="@drawable/ic_location"
            app:layout_constraintEnd_toStartOf="@+id/txtSalary"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtVacancyValue" />

        <TextView
            android:id="@+id/txtLocationValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="24dp"
            android:textColor="#ffff"
            android:text="Dhaka, Bangladesh"
            android:textIsSelectable="true"
            app:layout_constraintTop_toBottomOf="@id/txtLocation"
            app:layout_constraintEnd_toStartOf="@+id/txtSalaryValue"
            app:layout_constraintStart_toStartOf="@+id/txtLocation"

            />

        <TextView
            android:id="@+id/txtSalary"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="136dp"
            android:drawablePadding="5dp"
            android:text="@string/salary"
            android:textColor="#ffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDeadlineValue" />

        <TextView
            android:id="@+id/txtSalaryValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="32dp"
            android:textColor="#ffff"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/txtSalary"
            app:layout_constraintTop_toBottomOf="@+id/txtSalary" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/readBeforeApplyLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"

         android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cons">

        <TextView
            android:id="@+id/txtReadAndApply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="#000000"
            android:textIsSelectable="true"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/applyButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/apply_now"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:backgroundTint="#13a10e"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1" />


</androidx.constraintlayout.widget.ConstraintLayout>